[project]
name = "kchat"
version = "0.1.0"
description = "KCHAT"
authors = [
    {name = "GITSangWoo", email = "dogcenta@gmail.com"},
]
dependencies = []
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
]

[tool.pytest.ini_options]
pythonpath = "src"

[project.scripts]
kchat-ping = 'kchat.cli:ping'
